--- a/mayingfallback.ini
+++ b/mayingfallback.ini
@@ -24,11 +24,11 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🔰 节点选择`select`[]故障转移`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇸🇬 狮城`[]🇯🇵 日本`[]🇺🇲 美国`[]其他`[]手动切换`[]DIRECT
 ;custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`500
-custom_proxy_group=📲 电报吹水`select`[]🔰 节点选择`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇸🇬 狮城`[]🇯🇵 日本`[]🇺🇲 美国`[]其他`[]手动切换`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🔰 节点选择`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇸🇬 狮城`[]🇯🇵 日本`[]🇺🇲 美国`[]其他`[]手动切换`[]DIRECT
-custom_proxy_group=🎥 NETFLIX`select`[]🔰 节点选择`(NF*)`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇸🇬 狮城`[]🇯🇵 日本`[]🇺🇲 美国`[]其他`[]手动切换`[]DIRECT
-custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾`[]🔰 节点选择`[]其他`[]手动切换`[]DIRECT
-;custom_proxy_group=📺 AbemaTV`select`[]🇯🇵 日本`[]🔰 节点选择`[]其他`[]手动切换`[]DIRECT
+custom_proxy_group=📲 电报吹水`select`[]🔰 节点选择`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇸🇬 狮城`[]手动切换
+custom_proxy_group=📹 YouTube`select`[]🔰 节点选择`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇸🇬 狮城`[]手动切换
+custom_proxy_group=🎥 NETFLIX`select`[]🔰 节点选择`(NF*)`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇸🇬 狮城`[]🇯🇵 日本`[]🇺🇲 美国`[]手动切换
+custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾`[]手动切换
+;custom_proxy_group=📺 AbemaTV`select`[]🇯🇵 日本`[]手动切换
 custom_proxy_group=🇭🇰 香港`select`(港|HK|HONG|Hong|HGC)
 custom_proxy_group=🇨🇳 台湾`select`(台|新北|彰化|TW|Tai)
 custom_proxy_group=🇸🇬 狮城`select`(新|狮城|SG|Singa)
@@ -38,10 +38,10 @@ custom_proxy_group=其他`select`GCX`^((?!新|Jap|Tai|Singa|狮城|SG|港|HK|HON
 custom_proxy_group=🎥 奈非节点`select`(NF|解锁|Netflix|NETFLIX)`[]手动切换
 custom_proxy_group=手动切换`select`.*
 custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇸🇬 狮城`[]🇯🇵 日本`[]🇺🇲 美国`[]其他`[]手动切换`[]DIRECT
-custom_proxy_group=🌍 港台媒体`select`[]DIRECT`[]其他`[]🇭🇰 香港`[]🇨🇳 台湾
+custom_proxy_group=🌍 港台媒体`select`[]DIRECT`[]🇭🇰 香港`[]🇨🇳 台湾
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇸🇬 狮城`[]🇯🇵 日本`[]🇺🇲 美国`[]其他
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇸🇬 狮城`[]🇯🇵 日本`[]🇺🇲 美国`[]其他
-custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]代理`[]🇸🇬 狮城`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇲 美国`[]其他`[]DIRECT
+custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]🔰 节点选择`[]🇸🇬 狮城`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇲 美国`[]其他`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]DIRECT`[]🇭🇰 香港`[]🇨🇳 台湾`[]🇸🇬 狮城`[]🇯🇵 日本`[]🇺🇲 美国`[]其他
 custom_proxy_group=故障转移`fallback`(416|417|418)`http://www.gstatic.com/generate_204`8640
 ;fallback输入你常用的2-3个节点编号
