--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -21,6 +21,7 @@ surge_ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/lhie1/Rules/ma
 surge_ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bahamut.list
 surge_ruleset=🌏 亚洲媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/AsianTV.list
 surge_ruleset=🌍 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/GlobalTV.list
+surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ;surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -52,7 +53,7 @@ custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉
 custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US)
 custom_proxy_group=🎥 奈飞节点`select`(NF|解锁|Netflix|NETFLIX)
 custom_proxy_group=🚀 其他节点`select`GCX`^((?!新|Jap|Tai|Singa|狮城|SG|港|HK|HONG|Hong|HGC|台|新北|彰化|TW|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US).)*$
-custom_proxy_group=故障转移`fallback`(418|419|417|416)`http://www.gstatic.com/generate_204`8640
+custom_proxy_group=故障转移`fallback`(418|419|417|416)`http://www.gstatic.com/generate_204`600
 ;设置分组标志位
 
 enable_rule_generator=true
