--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -16,7 +16,7 @@ surge_ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SS
 surge_ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAdblockPlus.list
 surge_ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 surge_ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
-;surge_ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+surge_ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 surge_ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 surge_ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 surge_ruleset=🎯 网易云解锁,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Netease%20Music.list
@@ -25,27 +25,28 @@ surge_ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/lhie1/Rules/ma
 surge_ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bahamut.list
 surge_ruleset=🌏 亚洲媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/AsianTV.list
 surge_ruleset=🌍 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/GlobalTV.list
-;surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
-;surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Special.list
+surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/aenstan/myclash/master/rules/selfrules.list
 surge_ruleset=🎯 全球直连,[]GEOIP,CN
 surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 节点选择`select`[]CN2节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🔰 节点选择`select`[]♻️ 故障转移`[]CN2节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📲 电报消息`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
 custom_proxy_group=📹 油管视频`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
 custom_proxy_group=🎥 奈飞视频`select`[]🇸🇬 狮城节点`[]🎥 奈飞节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🔰 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点
 custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🌏 亚洲媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 其他节点`[]🚀 手动切换
-;custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🔰 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 其他节点`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🔰 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 其他节点`[]🚀 手动切换
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🔰 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 其他节点`[]🚀 手动切换
 custom_proxy_group=🎯 网易云解锁`select`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
@@ -62,7 +63,7 @@ custom_proxy_group=🚀 其他节点`select`GCX`^((?!新|Jap|Tai|Singa|狮城|SG
 custom_proxy_group=CN2节点`select`(CN2)
 custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=♻️ 自动选择`url-test`(326|327|426|427)`http://www.gstatic.com/generate_204`300
-;custom_proxy_group=♻️ 故障转移`fallback`(318|319|418|416)`http://www.gstatic.com/generate_204`600
+custom_proxy_group=♻️ 故障转移`fallback`(318|319|416|418)`http://www.gstatic.com/generate_204`600
 ;设置分组标志位
 enable_rule_generator=true
 overwrite_original_rules=true
