--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -1,13 +1,4 @@
 [custom]
-;不要随意改变关键字，否则会导致出错
-;acl4SSR规则
-
-;去广告：支持
-;自动测速：支持
-;微软分流：支持
-;苹果分流：支持
-;增强中国IP段：支持
-;增强国外GFW：支持
 
 ;设置规则标志位
 surge_ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -70,3 +61,5 @@ custom_proxy_group=🔯 故障转移`fallback`(318|319|416|418)`http://www.gstat
 ;设置分组标志位
 enable_rule_generator=true
 overwrite_original_rules=true
+
+clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
