--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -58,3 +58,6 @@ custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=🔮 负载均衡`load-balance`(318|319|416|418)`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🔯 故障转移`fallback`(322|323|422)`http://www.gstatic.com/generate_204`8640
 ;设置分组标志位
+
+enable_rule_generator=true
+overwrite_original_rules=true
