--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -61,3 +61,4 @@ custom_proxy_group=🔯 故障转移`fallback`(322|323|422)`http://www.gstatic.c
 
 enable_rule_generator=true
 overwrite_original_rules=true
+clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
