--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -56,7 +56,7 @@ custom_proxy_group=CN2节点`select`(CN2)
 custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=♻️ 自动选择`url-test`(326|327|426|427)`http://www.gstatic.com/generate_204`300
 ;custom_proxy_group=🔮 负载均衡`load-balance`(318|319|416|418)`http://www.gstatic.com/generate_204`180
-custom_proxy_group=🔯 故障转移`fallback`(322|323|422)`http://www.gstatic.com/generate_204`8640
+custom_proxy_group=🔯 故障转移`fallback`(318|319|416|418)`http://www.gstatic.com/generate_204`300
 ;设置分组标志位
 
 enable_rule_generator=true
