--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -7,7 +7,7 @@ surge_ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4
 surge_ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 surge_ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 surge_ruleset=🎸 TikTok,https://raw.githubusercontent.com/aenstan/myclash/master/rules/tiktok.list
-surge_ruleset=🙈 网易云解锁,https://raw.githubusercontent.com/aenstan/myclash/master/rules/NeteaseMusic.list
+;surge_ruleset=🙈 网易云解锁,https://raw.githubusercontent.com/aenstan/myclash/master/rules/NeteaseMusic.list
 surge_ruleset=📹 油管视频,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/YouTube.list
 surge_ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Netflix.list
 surge_ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bahamut.list
@@ -32,7 +32,7 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 节点选择`select`[]🔯 故障转移`[]CN2节点`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🔰 节点选择`select`[]🔯 故障转移`[]🇨🇳 CN2节点`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📲 电报消息`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
 custom_proxy_group=📹 油管视频`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
 custom_proxy_group=🎥 奈飞视频`select`[]🇸🇬 狮城节点`[]🎥 奈飞节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🔰 节点选择`[]🚀 手动切换
@@ -54,7 +54,7 @@ custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉
 custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US)
 custom_proxy_group=🎥 奈飞节点`select`(NF|NBU|解锁|Netflix|NETFLIX)
 custom_proxy_group=🚀 其他节点`select`GCX`^((?!新|Jap|Tai|Singa|狮城|SG|港|HK|HONG|Hong|HGC|台|新北|彰化|TW|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US).)*$
-custom_proxy_group=CN2节点`select`(CN2)
+custom_proxy_group=🇨🇳 CN2节点`select`(CN2)
 custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=♻️ 自动选择`url-test`(326|327|426|427)`http://www.gstatic.com/generate_204`300
 ;custom_proxy_group=🔮 负载均衡`load-balance`(318|319|416|418)`http://www.gstatic.com/generate_204`180
