--- a/config.ini
+++ b/config.ini
@@ -1,1 +1,51 @@
-#
+;设置规则标志位
+surge_ruleset=🍎 苹果服务,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Apple.list
+surge_ruleset=📲 电报消息,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Telegram.list
+surge_ruleset=🎸 TikTok,https://raw.githubusercontent.com/aenstan/myclash/master/rules/tiktok.list
+surge_ruleset=📹 油管视频,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/YouTube.list
+surge_ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Netflix.list
+surge_ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bahamut.list
+surge_ruleset=💻 亚洲媒体,https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/AsianMedia.list
+surge_ruleset=🌏 国际媒体,https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/GlobalMedia.list
+surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/aenstan/myclash/master/rules/proxy.list
+surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Proxy.list
+surge_ruleset=🛑 广告拦截,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Reject.list
+surge_ruleset=🛑 广告拦截,https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Tide.list
+surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Apple_CDN.list
+surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Region.list
+surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Special.list
+surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Domestic.list
+surge_ruleset=🎯 全球直连,[]GEOIP,CN
+surge_ruleset=🐟 漏网之鱼,[]FINAL
+;设置规则标志位
+
+;设置分组标志位
+custom_proxy_group=🔰 节点选择`select`[]🔯 故障转移`[]🇨🇳 CN2节点`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📲 电报消息`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
+custom_proxy_group=📹 油管视频`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
+custom_proxy_group=🎥 奈飞视频`select`[]🇸🇬 狮城节点`[]🎥 奈飞节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🔰 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点
+custom_proxy_group=🎸 TikTok`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
+custom_proxy_group=🌏 国际媒体`select`[]🔰 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=💻 亚洲媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 其他节点`[]🚀 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🔰 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 其他节点`[]🚀 手动切换
+custom_proxy_group=🎯 全球直连`select`[]DIRECT
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换
+custom_proxy_group=🇭🇰 香港节点`select`(港|HK|HONG|Hong|HGC)
+custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Tai)
+custom_proxy_group=🇸🇬 狮城节点`select`(新|狮城|SG|Singa)
+custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap)
+custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US)
+custom_proxy_group=🎥 奈飞节点`select`(NF|NBU|解锁|Netflix|NETFLIX)
+custom_proxy_group=🚀 其他节点`select`GCX`^((?!新|Jap|Tai|Singa|狮城|SG|港|HK|HONG|Hong|HGC|台|新北|彰化|TW|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US).)*$
+custom_proxy_group=🇨🇳 CN2节点`select`(CN2)
+custom_proxy_group=🚀 手动切换`select`.*
+;custom_proxy_group=♻️ 自动选择`url-test`(326|327|426|427)`http://www.gstatic.com/generate_204`300
+;custom_proxy_group=🔮 负载均衡`load-balance`(318|319|416|418)`http://www.gstatic.com/generate_204`180
+custom_proxy_group=🔯 故障转移`fallback`(318|418|419)`http://www.gstatic.com/generate_204`300
+;设置分组标志位
+
+enable_rule_generator=true
+overwrite_original_rules=true
+;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
