--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -51,9 +51,9 @@ custom_proxy_group=🎥 奈飞节点`select`(NF|NBU|解锁|Netflix|NETFLIX)
 custom_proxy_group=🚀 其他节点`select`GCX`^((?!新|Jap|Tai|Singa|狮城|SG|港|HK|HONG|Hong|HGC|台|新北|彰化|TW|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US).)*$
 custom_proxy_group=🇨🇳 CN2节点`select`(CN2)
 custom_proxy_group=🚀 手动切换`select`.*
-;custom_proxy_group=♻️ 自动选择`url-test`(326|327|426|427)`http://www.gstatic.com/generate_204`300
-;custom_proxy_group=🔮 负载均衡`load-balance`(318|319|416|418)`http://www.gstatic.com/generate_204`180
-custom_proxy_group=🔯 故障转移`fallback`(318|418|419)`http://www.gstatic.com/generate_204`300
+;custom_proxy_group=♻️ 自动选择`url-test`(326|327|370)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🔮 负载均衡`load-balance`(326|327|370)`http://cp.cloudflare.com/generate_204
+;custom_proxy_group=🔯 故障转移`fallback`(326|327|370)`http://cp.cloudflare.com/generate_204
 ;设置分组标志位
 
 enable_rule_generator=true
