--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -53,7 +53,7 @@ custom_proxy_group=🇨🇳 CN2节点`select`(CN2)
 custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=🔮 负载均衡`load-balance`(370|326|327)`http://cp.cloudflare.com/generate_204
 ;custom_proxy_group=♻️ 自动选择`url-test`(370|326|327)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🔯 故障转移`fallback`(370|326|327)`http://cp.cloudflare.com/generate_204
+custom_proxy_group=🔯 故障转移`fallback`(370|326|327)`http://cp.cloudflare.com/generate_204`300
 ;设置分组标志位
 
 ;enable_rule_generator=true
