--- a/js/Task_Remote.conf
+++ b/js/Task_Remote.conf
@@ -13,7 +13,10 @@
 ;* * * * * sample-task.js
 
 # GitHub监控(By Peng-YM)
-0 10 * * * https://raw.githubusercontent.com/aenstan/myclash/master/js/github.js, tag=GitHub, img-url=https://raw.githubusercontent.com/Orz-3/task/master/github.png, enabled=true
+30 9 * * * https://raw.githubusercontent.com/aenstan/myclash/master/js/github.js, tag=GitHub, img-url=https://raw.githubusercontent.com/Orz-3/task/master/github.png, enabled=true
+
+# 疫情日报 (By Peng-YM)
+30 9 * * * https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/nCov.js, tag=疫情日报, img-url=https://raw.githubusercontent.com/Orz-3/task/master/COVID-19.png,enabled=true
 
 # Epic周免(By Peng-YM)
 0 8 */7 * * https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/epic.js, tag=Epic周免, img-url=https://raw.githubusercontent.com/Orz-3/task/master/epic.png, enabled=true
