--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -32,20 +32,20 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 节点选择`select`[]🔯 故障转移`[]🇨🇳 CN2节点`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📲 电报消息`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
+custom_proxy_group=🔰 节点选择`select`[]🔯 故障转移`[]🚀 其他节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📲 电报消息`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🚀 手动切换
 custom_proxy_group=📹 油管视频`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
 custom_proxy_group=🎥 奈飞视频`select`[]🇸🇬 狮城节点`[]🎥 奈飞节点`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🔰 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点
-custom_proxy_group=🎸 TikTok`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换
-custom_proxy_group=🌏 国外媒体`select`[]🔰 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=💻 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 其他节点`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🔰 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 其他节点`[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🔰 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 其他节点`[]🚀 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换
+custom_proxy_group=🎸 TikTok`select`[]🔰 节点选择`[]🚀 手动切换
+custom_proxy_group=🌏 国外媒体`select`[]🔰 节点选择`[]🚀 其他节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=💻 国内媒体`select`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🔰 节点选择`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🔰 节点选择`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 其他节点`[]🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]DIRECT`[]🚀 手动切换
 custom_proxy_group=🇭🇰 香港节点`select`(港|HK|HONG|Hong|HGC)
 custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Tai)
 custom_proxy_group=🇸🇬 狮城节点`select`(新|狮城|SG|Singa)
@@ -57,9 +57,9 @@ custom_proxy_group=🇨🇳 CN2节点`select`(CN2)
 custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=🔮 负载均衡`load-balance`(370|326|327)`http://cp.cloudflare.com/generate_204
 ;custom_proxy_group=♻️ 自动选择`url-test`(370|326|327)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🔯 故障转移`fallback`(417|418|419|420)`http://cp.cloudflare.com/generate_204`300
+custom_proxy_group=🔯 故障转移`fallback`(319|420|472|476)`http://cp.cloudflare.com/generate_204`300
 ;设置分组标志位
 
 enable_rule_generator=true
 overwrite_original_rules=true
-;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
+clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
