--- a/config.ini
+++ b/config.ini
@@ -48,7 +48,7 @@ custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]DIRECT`[]🚀 手动切换
 custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Tai)
 custom_proxy_group=🇸🇬 狮城节点`select`(新|狮城|SG|Singa)
-custom_proxy_group=🚀 手动切换`select`[]🔰 节点选择`[].*
+custom_proxy_group=🚀 手动切换`select`.*[]🔰 节点选择`
 ;custom_proxy_group=🔮 负载均衡`load-balance`(370|326|327)`http://cp.cloudflare.com/generate_204
 ;custom_proxy_group=♻️ 自动选择`url-test`(370|326|327)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🔯 故障转移`fallback`(308|311|426|427)`http://cp.cloudflare.com/generate_204`300
