--- a/config.ini
+++ b/config.ini
@@ -56,4 +56,4 @@ custom_proxy_group=🔯 故障转移`fallback`(325|421|472|476)`http://cp.cloudf
 
 enable_rule_generator=true
 overwrite_original_rules=true
-;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
+clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
