--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,6 @@ surge_ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SS
 surge_ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 surge_ruleset=💻 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 surge_ruleset=🌏 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-;surge_ruleset=🎶 网易音乐,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 surge_ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 surge_ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
 surge_ruleset=🔰 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
@@ -50,8 +49,8 @@ custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Tai)
 custom_proxy_group=🇸🇬 狮城节点`select`(新|狮城|SG|Singa)
 custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=🔮 负载均衡`load-balance`(370|326|327)`http://cp.cloudflare.com/generate_204
-;custom_proxy_group=♻️ 自动选择`url-test`(370|326|327)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🔯 故障转移`fallback`(325|421|472|476)`http://cp.cloudflare.com/generate_204`300
+custom_proxy_group=♻️ 自动选择`url-test`(325|421|472|476)`http://www.gstatic.com/generate_204`300
+;custom_proxy_group=🔯 故障转移`fallback`(325|421|472|476)`http://cp.cloudflare.com/generate_204`300
 ;设置分组标志位
 
 enable_rule_generator=true
