--- a/config.ini
+++ b/config.ini
@@ -31,7 +31,7 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 节点选择`select`[]🔯 故障转移`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🔰 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📲 电报消息`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🚀 手动切换
 custom_proxy_group=📹 油管视频`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🚀 手动切换
 custom_proxy_group=🎥 奈飞视频`select`[]🇸🇬 狮城节点`[]🚀 手动切换
