--- a/js/Task_Remote.conf
+++ b/js/Task_Remote.conf
@@ -90,7 +90,7 @@
 1 0 * * * https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js, tag=52破解, img-url=https://raw.githubusercontent.com/Orz-3/task/master/52pj.png,enabled=true
 
 # 万达电影
-10 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/wanda/wanda.js, tag=万达电影
+10 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/wanda/wanda.js, tag=万达电影, img-url=https://raw.githubusercontent.com/Orz-3/task/master/wanda.png,enabled=true
 
 # 时光相册
 #打开 APP 然后手动签到 1 次
