--- a/config.ini
+++ b/config.ini
@@ -31,7 +31,7 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 节点选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🔰 节点选择`select`[]🔯 故障转移`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📲 电报消息`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🚀 手动切换
 custom_proxy_group=📹 油管视频`select`[]🔰 节点选择`[]🇸🇬 狮城节点`[]🚀 手动切换
 custom_proxy_group=🎥 奈飞视频`select`[]🇸🇬 狮城节点`[]🚀 手动切换
@@ -49,8 +49,8 @@ custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Tai)
 custom_proxy_group=🇸🇬 狮城节点`select`(新|狮城|SG|Singa)
 custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=🔮 负载均衡`load-balance`(370|326|327)`http://cp.cloudflare.com/generate_204
-custom_proxy_group=♻️ 自动选择`url-test`(426|427|473|476)`http://www.gstatic.com/generate_204`300
-;custom_proxy_group=🔯 故障转移`fallback`(325|421|472|476)`http://cp.cloudflare.com/generate_204`300
+:custom_proxy_group=♻️ 自动选择`url-test`(426|427|473|476)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🔯 故障转移`fallback`(426|427|473|476)`http://cp.cloudflare.com/generate_204`300
 ;设置分组标志位
 
 enable_rule_generator=true
