--- a/js/Task_Remote.conf
+++ b/js/Task_Remote.conf
@@ -37,6 +37,10 @@
 # 打开 APP 然后手动签到 1 次
 1 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/neteasenews/neteasenews.js, tag=网易新闻, img-url=https://raw.githubusercontent.com/Orz-3/task/master/neteasenews.png, enabled=true
 
+# 网易严选
+#打开 APP, 访问下`个人`>`每日签到`(右上角)
+# 6 0 * * * https://raw.githubusercontent.com/chavyleung/scripts/master/yanxuan/yanxuan.js, tag=网易严选, img-url=https://raw.githubusercontent.com/Orz-3/task/master/yanxuan.png,enabled=true
+
 # 饿了么   (By @syzzzf)
 # 打开 APP, 访问下`我的`>`签到领红包`(左上角)
 1 0 * * * https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemSign.js, tag=饿了么签到, img-url=https://raw.githubusercontent.com/Orz-3/task/master/elem.png, enabled=true
