--- a/config.ini
+++ b/config.ini
@@ -49,8 +49,8 @@ custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Tai)
 custom_proxy_group=🇸🇬 狮城节点`select`(新|狮城|SG|Singa)
 custom_proxy_group=🚀 手动切换`select`.*
 ;custom_proxy_group=🔮 负载均衡`load-balance`(370|326|327)`http://cp.cloudflare.com/generate_204
-:custom_proxy_group=♻️ 自动选择`url-test`(426|427|473|476)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🔯 故障转移`fallback`(426|427|473|476)`http://cp.cloudflare.com/generate_204`300
+;custom_proxy_group=♻️ 自动选择`url-test`(426|427|473|476)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🔯 故障转移`fallback`(408|409|428|410)`http://cp.cloudflare.com/generate_204`300
 ;设置分组标志位
 
 enable_rule_generator=true
