--- a/js/Js.conf
+++ b/js/Js.conf
@@ -5,7 +5,8 @@ hostname = greasyfork.org, openuserjs.org, trade-acs.m.taobao.com, *.*apps.com, 
 ^https?://boxjs.com/api url script-request-body https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
 ^https?://boxjs.com(/home|/sub|/my|/app|/log|/revert)?($|\/) url script-echo-response https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
 
-##NobyDa
+# 中青看点自动阅读获取body
+^https:\/\/ios\.baertt\.com\/v5\/article\/complete url script-request-body https://cdn.jsdelivr.net/gh/songyangzz/QuantumultX@master/zqgetbody.js
 
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
@@ -118,13 +119,25 @@ https://note.youdao.com/yws/(mapi/payment|api/self) url script-response-body htt
 # JAV101无限观看 (By 凉意)
 ^https\:\/\/pwaapi\.gao1gps\.cn\/v1\/user\/info url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/JAV101.js
 
-#京东热8盲盒
-#Safari浏览器打开京东热8超级盲盒活动地址自动脚本注入，点击脚本左下的执行按键就行了，很方便。活动地址：https://blindbox.jd.com/
-;https://blindbox\.jd\.com/$ url script-response-body https://raw.githubusercontent.com/ZhiYi-N/Loon/master/jd_r8.js
-
 #google
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
 
+# sub-store
+^https?:\/\/sub\.store url script-analyze-echo-response https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/sub-store.min.js
+
+# 来客有礼
+https:\/\/draw\.jdfcloud\.com\/\/api\/bean\/square\/silverBean\/task\/get\? url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/lkyl.js
+
+# 宠汪汪助力更新Token
+^https:\/\/draw\.jdfcloud\.com\/\/api\/user\/addUser\?code=\w+& url script-response-body https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_joy_run.js
+# 宠汪汪助力获取Token
+^https:\/\/draw\.jdfcloud\.com\/\/api\/user\/user\/detail\?openId=\w+& url script-request-header https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_joy_run.js
+
+# 宠汪汪聚宝盆辅助脚本
+^https:\/\/jdjoy\.jd\.com\/pet\/getPetTreasureBox|^https:\/\/draw\.jdfcloud\.com\/\/pet\/getPetTreasureBox url script-response-body https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_petTreasureBox.js
+
+# 京东赚赚
+^https\:\/\/api\.m\.jd\.com\/client\.action\?functionId\=interactIndex url script-request-header https://raw.githubusercontent.com/whyour/hundun/master/quanx/jdzz.cookie.js
 
 ##以下为仅QX1.05+(TF188+)可用
 
