--- a/js/Js.conf
+++ b/js/Js.conf
@@ -1,4 +1,4 @@
-hostname = sub.store, music.163.com, *.music.163.com, api.m.jd.com, draw.jdfcloud.com, jdjoy.jd.com, trade-acs.m.taobao.com, ios.prod.ftl.netflix.com, pan.baidu.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, api.bilibili.com, app.bilibili.com, *.amemv.com, *.kuwo.cn, vip1.kuwo.cn, newdrugs.dxy.cn, account.wps.*, api.termius.com, biz.caiyunapp.com, api.interpreter.caiyunai.com, ap*.intsig.net, photos.adobe.io, education.github.com, note.youdao.com, api.gamer.com.tw
+hostname = sub.store, api.m.jd.com, draw.jdfcloud.com, jdjoy.jd.com, trade-acs.m.taobao.com, ios.prod.ftl.netflix.com, pan.baidu.com, mp.weixin.qq.com, api.zhihu.com, link.zhihu.com, api.bilibili.com, app.bilibili.com, *.amemv.com, *.kuwo.cn, vip1.kuwo.cn, newdrugs.dxy.cn, account.wps.*, api.termius.com, biz.caiyunapp.com, api.interpreter.caiyunai.com, ap*.intsig.net, photos.adobe.io, education.github.com, note.youdao.com, api.gamer.com.tw
 
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
