--- a/config.ini
+++ b/config.ini
@@ -27,7 +27,7 @@ custom_proxy_group=🎥𝐍𝐞𝐭𝐟𝐥𝐢𝐱`select`[]🇸🇬𝐒𝐆`[]
 custom_proxy_group=📹𝐘𝐨𝐮𝐓𝐮𝐛𝐞`select`[]🔰𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🚀𝐒𝐞𝐥𝐞𝐜𝐭
 custom_proxy_group=📺𝐁𝐚𝐡𝐚𝐦𝐮𝐭`select`[]🇨🇳𝐓𝐖
 custom_proxy_group=🎸𝐓𝐢𝐤𝐓𝐨𝐤`select`[]🔰𝐏𝐫𝐨𝐱𝐲`[]🇯🇵𝐉𝐏`[]🚀𝐒𝐞𝐥𝐞𝐜𝐭
-custom_proxy_group=🍎𝐀𝐩𝐩𝐥𝐞`select`[]🔰𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🚀𝐒𝐞𝐥𝐞𝐜𝐭
+custom_proxy_group=🍎𝐀𝐩𝐩𝐥𝐞`select`[]🔰𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🚀𝐒𝐞𝐥𝐞𝐜𝐭`[]DIRECT
 custom_proxy_group=🎯𝐃𝐢𝐫𝐞𝐜𝐭`select`[]DIRECT
 custom_proxy_group=🚫𝐀𝐝𝐁𝐥𝐨𝐜𝐤`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟𝐅𝐢𝐧𝐚𝐥`select`[]🔰𝐏𝐫𝐨𝐱𝐲`[]DIRECT`[]🚀𝐒𝐞𝐥𝐞𝐜𝐭
