--- a/config.ini
+++ b/config.ini
@@ -33,7 +33,7 @@ custom_proxy_group=🇭🇰𝐇𝐊`select`(港|HK|HONG|Hong|HGC)
 custom_proxy_group=🇸🇬𝐒𝐆`select`(新|狮城|SG|Singa)
 custom_proxy_group=🇨🇳𝐓𝐖`select`(台|新北|彰化|TW|Tai)
 custom_proxy_group=🇯🇵𝐉𝐏`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Jap)
-custom_proxy_group=🇺🇸𝐔𝐒`select(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
+custom_proxy_group=🇺🇸𝐔𝐒`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
 ;custom_proxy_group=🔮 负载均衡`load-balance`(370|326|327)`http://cp.cloudflare.com/generate_204
 ;custom_proxy_group=♻️自动选择`url-test`(426|427|473|476)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🔯𝐀𝐮𝐭𝐨`fallback`(426|427|428|429)`http://cp.cloudflare.com/generate_204`300
