--- a/js/Cookies.conf
+++ b/js/Cookies.conf
@@ -1,7 +1,7 @@
 #Cookie获取订阅
 
 
-hostname = api.m.jd.com, ifac*.iqiyi.com, www.52pojie.cn, *.video.qq.com, *.music.163.com, *.you.163.com, *.m.163.com, *.bilibili.com, *.smzdm.com, wapside.189.cn, *.y.qq.com, api.everphoto.cn, maicai.api.ddxq.mobi, daojia.jd.com, zt.wps.cn, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, www.duokan.com, user-api-prd-mx.wandafilm.com, h5.ele.me, maicai.api.ddxq.mobi, operation-api.jimistore.com
+hostname = sf-express.com, api.m.jd.com, ifac*.iqiyi.com, www.52pojie.cn, *.video.qq.com, *.music.163.com, *.you.163.com, *.m.163.com, *.bilibili.com, *.smzdm.com, wapside.189.cn, *.y.qq.com, api.everphoto.cn, maicai.api.ddxq.mobi, daojia.jd.com, zt.wps.cn, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, www.duokan.com, user-api-prd-mx.wandafilm.com, h5.ele.me, maicai.api.ddxq.mobi, operation-api.jimistore.com
 
 # 京东签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
@@ -78,3 +78,6 @@ https:\/\/daojia\.jd\.com\/client\?_jdrandom=\d{13}&functionId=%2Fsignin url scr
 # 支付宝天天挖矿
 ^https:\/\/operation-api\.jimistore\.com\/* url script-request-body https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/ttwk/ttwk.js
 
+# 顺丰速运
+^https:\/\/sf-integral-sign-in.weixinjia.net\/app\/index url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/sfexpress/sfexpress.cookie.js
+^https:\/\/mcs-mimp-web.sf-express.com\/mcs-mimp\/share\/(.*?)Redirect url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/sfexpress/sfexpress.cookie.js
