--- a/js/Cookies.conf
+++ b/js/Cookies.conf
@@ -3,6 +3,9 @@
 
 hostname = sf-express.com, api.m.jd.com, ifac*.iqiyi.com, www.52pojie.cn, *.video.qq.com, *.music.163.com, *.you.163.com, *.m.163.com, *.bilibili.com, *.smzdm.com, wapside.189.cn, *.y.qq.com, api.everphoto.cn, maicai.api.ddxq.mobi, daojia.jd.com, zt.wps.cn, passport.suning.com, luckman.suning.com, sign.suning.com, gameapi.suning.com, www.duokan.com, user-api-prd-mx.wandafilm.com, h5.ele.me, maicai.api.ddxq.mobi, operation-api.jimistore.com
 
+# Bilibili直播获取Cookie
+^https:\/\/(www|live)\.bilibili\.com\/?.? url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.cookie.js
+
 # 京东签到获取cookie
 https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
 
