--- a/config.ini
+++ b/config.ini
@@ -21,7 +21,7 @@ surge_ruleset=🐟𝐅𝐢𝐧𝐚𝐥,[]FINAL
 custom_proxy_group=🌀𝐒𝐞𝐥𝐞𝐜𝐭`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
 custom_proxy_group=🚀𝐏𝐫𝐨𝐱𝐲`select`.*
 custom_proxy_group=📲𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦`select`[]🌀𝐒𝐞𝐥𝐞𝐜𝐭`[]🇸🇬𝐒𝐆`[]🇭🇰𝐇𝐊`[]🚀𝐏𝐫𝐨𝐱𝐲
-custom_proxy_group=🎥𝐍𝐞𝐭𝐟𝐥𝐢𝐱`select`[]🇸🇬𝐒𝐆`[]🚀𝐏𝐫𝐨𝐱𝐲
+custom_proxy_group=🎥𝐍𝐞𝐭𝐟𝐥𝐢𝐱`select`[]🌀𝐒𝐞𝐥𝐞𝐜𝐭`[]🇸🇬𝐒𝐆`[]🇭🇰𝐇𝐊`[]🇯🇵𝐉𝐏`[]🇺🇸𝐔𝐒`[]🚀𝐏𝐫𝐨𝐱𝐲
 custom_proxy_group=📹𝐘𝐨𝐮𝐓𝐮𝐛𝐞`select`[]🌀𝐒𝐞𝐥𝐞𝐜𝐭`[]🇭🇰𝐇𝐊`[]🇺🇸𝐔𝐒`[]🚀𝐏𝐫𝐨𝐱𝐲
 custom_proxy_group=📺𝐁𝐚𝐡𝐚𝐦𝐮𝐭`select`[]🇨🇳𝐓𝐖
 custom_proxy_group=🎸𝐓𝐢𝐤𝐓𝐨𝐤`select`[]🌀𝐒𝐞𝐥𝐞𝐜𝐭`[]🇯🇵𝐉𝐏`[]🇺🇸𝐔𝐒`[]🚀𝐏𝐫𝐨𝐱𝐲
