--- a/config.ini
+++ b/config.ini
@@ -21,15 +21,15 @@ surge_ruleset=🐟𝐅𝐢𝐧𝐚𝐥,[]FINAL
 custom_proxy_group=🌀𝐒𝐞𝐥𝐞𝐜𝐭`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
 custom_proxy_group=🔯𝐀𝐮𝐭𝐨`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀𝐏𝐫𝐨𝐱𝐲`select`.*
-custom_proxy_group=📲𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦`select`[]🔯𝐀𝐮𝐭𝐨`[]🇸🇬𝐒𝐆`[]🇭🇰𝐇𝐊`[]🚀𝐏𝐫𝐨𝐱𝐲
-custom_proxy_group=🎥𝐍𝐞𝐭𝐟𝐥𝐢𝐱`select`[]🔯𝐀𝐮𝐭𝐨`[]🇸🇬𝐒𝐆`[]🇭🇰𝐇𝐊`[]🇯🇵𝐉𝐏`[]🇺🇸𝐔𝐒`[]🚀𝐏𝐫𝐨𝐱𝐲
-custom_proxy_group=📹𝐘𝐨𝐮𝐓𝐮𝐛𝐞`select`[]🔯𝐀𝐮𝐭𝐨`[]🇭🇰𝐇𝐊`[]🇺🇸𝐔𝐒`[]🚀𝐏𝐫𝐨𝐱𝐲
+custom_proxy_group=📲𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
+custom_proxy_group=🎥𝐍𝐞𝐭𝐟𝐥𝐢𝐱`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
+custom_proxy_group=📹𝐘𝐨𝐮𝐓𝐮𝐛𝐞`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
 custom_proxy_group=📺𝐁𝐚𝐡𝐚𝐦𝐮𝐭`select`[]🇨🇳𝐓𝐖
-custom_proxy_group=🎸𝐓𝐢𝐤𝐓𝐨𝐤`select`[]🔯𝐀𝐮𝐭𝐨`[]🇯🇵𝐉𝐏`[]🇺🇸𝐔𝐒`[]🚀𝐏𝐫𝐨𝐱𝐲
-custom_proxy_group=🍎𝐀𝐩𝐩𝐥𝐞`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]DIRECT
+custom_proxy_group=🎸𝐓𝐢𝐤𝐓𝐨𝐤`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
+custom_proxy_group=🍎𝐀𝐩𝐩𝐥𝐞`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
 custom_proxy_group=🎯𝐃𝐢𝐫𝐞𝐜𝐭`select`[]DIRECT
 custom_proxy_group=🚫𝐀𝐝𝐁𝐥𝐨𝐜𝐤`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟𝐅𝐢𝐧𝐚𝐥`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]DIRECT
+custom_proxy_group=🐟𝐅𝐢𝐧𝐚𝐥`select`[]🔯𝐀𝐮𝐭𝐨`[]🚀𝐏𝐫𝐨𝐱𝐲`[]🇭🇰𝐇𝐊`[]🇸🇬𝐒𝐆`[]🇨🇳𝐓𝐖`[]🇺🇸𝐔𝐒`[]🇯🇵𝐉𝐏`[]DIRECT
 custom_proxy_group=🇭🇰𝐇𝐊`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬𝐒𝐆`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,5
 custom_proxy_group=🇨🇳𝐓𝐖`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
