--- a/config.ini
+++ b/config.ini
@@ -10,6 +10,7 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/aenstan/myclash/master/rules/proxy.list
 ruleset=🇺🇲 美国节点,https://raw.githubusercontent.com/aenstan/myclash/master/rules/proxy-us.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/aenstan/myclash/master/rules/direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
