--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 ;设置规则标志位
+surge_ruleset=🍎𝐀𝐩𝐩𝐥𝐞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 surge_ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
 surge_ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list
 surge_ruleset=🚀𝐒𝐞𝐥𝐞𝐜𝐭,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
@@ -27,6 +28,7 @@ custom_proxy_group=🇸🇬𝐒𝐆`url-test`(新加坡|坡|狮城|SG|Singapore)
 custom_proxy_group=🇨🇳𝐓𝐖`select`(台|新北|彰化|TW|Taiwan)
 custom_proxy_group=🇯🇵𝐉𝐏`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
 custom_proxy_group=🇺🇸𝐔𝐒`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
+custom_proxy_group=🍎𝐀𝐩𝐩𝐥𝐞`select`[]🚀𝐒𝐞𝐥𝐞𝐜𝐭`[]DIRECT
 custom_proxy_group=🐟𝐅𝐢𝐧𝐚𝐥`select`[]🚀𝐒𝐞𝐥𝐞𝐜𝐭`[]DIRECT
 custom_proxy_group=🎯𝐃𝐢𝐫𝐞𝐜𝐭`select`[]DIRECT
 custom_proxy_group=🚫𝐀𝐝𝐁𝐥𝐨𝐜𝐤`select`[]REJECT`[]DIRECT
